--- a/osmfr.yml
+++ b/osmfr.yml
@@ -82,6 +82,7 @@ Layer:
 
 
   - id: lowzoom
+    zoom_max: 7
     geometry: raster
     extent: *world
     Datasource:
@@ -521,6 +522,7 @@ Layer:
 
   - id: trees
     <<: *extents
+    zoom_min: 17
     properties:
       minzoom: 17
     Datasource:
@@ -769,11 +771,13 @@ Layer:
     Datasource:
       <<: *osm2pgsql
       table: " /* guideways */ (select way from planet_osm_line where highway='bus_guideway' and (tunnel is null and covered is null or coalesce(tunnel,covered,'') not in ('yes','true','1','building_passage'))) as guideways"
+      simplify_geometries: 'true'
 
 
   - id: admin-lz
     <<: *extents
     zoom_min: 4
+    zoom_max: 10
     Datasource:
       <<: *osm2pgsql
       table: " /* admin-lz */ (select ST_Simplify(way,!pixel_width!/4) as way, admin_level, tags->'maritime' as maritime from planet_osm_roads where way && !bbox! and boundary='administrative' and admin_level in ('1','2','3','4','5','6') and osm_id>0 and (\"natural\" is null or \"natural\" != 'coastline') order by 2 desc, maritime) as admin"
@@ -911,7 +915,6 @@ Layer:
   - id: amenity-points
     <<: *extents
     zoom_min: 13
-    zoom_max: 13
     Datasource:
       <<: *osm2pgsql
       table: >-
@@ -1078,27 +1081,26 @@ Layer:
     Datasource:
       <<: *osm2pgsql
       table: >-
-        /* admin-boundaries-text */ (SELECT
-        ST_Simplify(ST_Boundary((ST_Dumprings(ST_ForceRHR((ST_Dump(way)).geom))).geom),!pixel_width!/2)
-        as way, to_int(admin_level) as admin_level ,
-        coalesce(tags->'name:fr',tags->'int_name',name) as name,
-        tags->'ref:INSEE' as insee,
-        fr_abbrev(coalesce(tags->'name:fr',tags->'int_name',name)) as nom  FROM
-        planet_osm_polygon p where ST_Intersects(p.way, !bbox!) AND not
-        ST_Covers(p.way,!bbox!) AND boundary='administrative' AND admin_level is not NULL order by 2 desc)
+        /* admin-boundaries-text */ (
+        SELECT
+          ST_Simplify(ST_Boundary((ST_Dumprings(ST_ForceRHR((ST_Dump(way)).geom))).geom),!pixel_width!/2) as way,
+          to_int(admin_level) as admin_level,
+          coalesce(tags->'name:fr',tags->'int_name',name) as name,
+          tags->'ref:INSEE' as insee,
+          fr_abbrev(coalesce(tags->'name:fr',tags->'int_name',name)) as nom
+        FROM planet_osm_polygon p
+        WHERE ST_Intersects(p.way, !bbox!)
+          AND not ST_Covers(p.way,!bbox!)
+          AND boundary='administrative'
+          AND admin_level is not NULL
+        ORDER BY 2 desc)
         as admin_boundaries_text
-
-
-  - id: placenames-large-lz
-    <<: *extents
-    Datasource:
-      <<: *osm2pgsql
-      table: " /* placenames-large-lz */ (SELECT ST_Snaptogrid(way,!pixel_width!) as way, place, coalesce(tags->'name:fr',tags->'int_name',name) as name, fr_abbrev(coalesce(p.tags->'short_name:fr',p.tags->'short_name',p.tags->'name:fr',p.name)) as nom, to_int(population) as pop, coalesce(tags->'is_capital', (case when coalesce(admin_level, capital)='2' then 'country' when tags->'importance'='international' then 'state' when coalesce(admin_level, capital)='4' then 'state' when tags->'importance'='national' then 'state' else null end) ) as is_capital, array_length(hstore_to_array(tags),1)/2 as nbtags  FROM planet_osm_point p  WHERE  way && !bbox! and place is not null and place in ('city','town') and (tags->'is_capital' in ('country','state') or capital in ('2','4') or (capital='yes' and admin_level in ('2','4')) or tags->'importance' in ('international','national') or array_length(hstore_to_array(tags),1)/2>20) order by is_capital, coalesce(admin_level, capital,'9'), place, pop desc ) as placenames"
 
 
   - id: placenames-small-lz
     <<: *extents
     zoom_min: 6
+    zoom_max: 11
     Datasource:
       <<: *osm2pgsql
       table: " /* placenames-small-lz */ (SELECT ST_Snaptogrid(way,!pixel_width!) as way, place, coalesce(tags->'name:fr',tags->'int_name',name) as name, fr_abbrev(coalesce(p.tags->'short_name:fr',p.tags->'short_name',p.tags->'name:fr',p.name)) as nom, to_int(population) as pop  FROM  planet_osm_point p  WHERE  way && !bbox! and place is not null and place in ('suburb','neighbourhood','quater','village','large_village','hamlet','locality','isolated_dwelling','farm') order by pop desc, osm_id     ) as placenames"
