--- a/osmfr.yml
+++ b/osmfr.yml
@@ -550,6 +550,7 @@ Layer:
     Datasource:
       <<: *osm2pgsql
       table: " /* access-pre-bridges */ (select way,access,highway,coalesce(tags->'footway','') as footway,  case when service in ('parking_aisle','drive-through','driveway') then 'INT-minor'::text else 'INT-normal'::text end as service from planet_osm_line where access is not null and highway is not null and (bridge is null or bridge not in ('yes','true','1','viaduct')) ) as access"
+      simplify_geometries: 'true'
 
 
   - id: direction-pre-bridges
@@ -559,6 +560,7 @@ Layer:
     Datasource:
       <<: *osm2pgsql
       table: " /* direction-pre-bridges */ (select '-1' as oneway, junction, case when coalesce(tunnel,covered) in ('yes','true','1') then 'yes'::text else 'no'::text end as tunnel, coalesce(tags->'footway','') as footway, case when oneway in ('yes','true','1') or junction='roundabout' then ST_Reverse(way) else way end as way from planet_osm_line  where way && !bbox! and ((oneway is not null and oneway not in ('no','false','0')) or (junction='roundabout')) and (highway is not null or railway is not null or waterway is not null)  and (bridge is null or bridge not in ('yes','true','1','viaduct')) AND z_order>=0) as directions"
+      simplify_geometries: 'true'
 
 
   - id: bridges-poly
@@ -567,6 +569,7 @@ Layer:
     Datasource:
       <<: *osm2pgsql
       table: " /* bridges-poly */ (select way from planet_osm_polygon where man_made='bridge'  and way_area > !pixel_width!*!pixel_height!*10 order by z_order) as bridge_poly"
+      simplify_geometries: 'true'
 
 
   - id: waterway-bridges
@@ -737,6 +740,7 @@ Layer:
         ('runway','taxiway','taxipath','parking_position') or railway in
         ('light_rail','subway','narrow_gauge','rail','spur','siding','disused','abandoned','construction')
         or waterway is not null)  ORDER BY z_order) as layer5
+      simplify_geometries: 'true'
 
       
   - id: highway_crossings
@@ -772,6 +776,7 @@ Layer:
     Datasource:
       <<: *osm2pgsql
       table: " /* trams */ (select way,railway,bridge from planet_osm_line where railway='tram' and (tunnel is null and covered is null or coalesce(tunnel,covered,'') not in ('yes','true','1','building_passage'))) as trams"
+      simplify_geometries: 'true'
 
 
   - id: guideways
@@ -917,11 +922,11 @@ Layer:
           OR railway in ('level_crossing','buffer_stop'))
           AND way_area > !pixel_width!*!pixel_height!*10
         ) as amenity_symbols"
-
-    class: symbols
+      simplify_geometries: 'true'
 
 
   - id: amenity-points
+    class: points
     <<: *extents
     zoom_min: 13
     Datasource:
@@ -1048,6 +1053,7 @@ Layer:
     Datasource:
       <<: *osm2pgsql
       table: " /* roads-text-name */ (SELECT *, fr_abbrev(coalesce(short_name, name)) as nom FROM (SELECT st_intersection(bbbox(!bbox!,!pixel_width!,!pixel_height!,12),st_linemerge(st_collect(way))) as way, highway, name, short_name, railway, tunnel, junction, sum(way_len) as way_len from (select way,highway,coalesce(tags->'name:fr',tags->'int_name',name) as name, coalesce(tags->'short_name:fr',tags->'short_name') as short_name, st_length(way) as way_len, railway,tunnel, junction, oneway  FROM  planet_osm_line p  WHERE  way && !bbox! AND route IS NULL AND waterway IS NULL  and leisure IS NULL  and landuse IS NULL  and name is not null and NOT tags ? 'land_area' and (position('GR' in name)!=1 AND position('G.R' in name) !=1 AND position('G R ' in name) !=1) and coalesce(highway, railway, aeroway, man_made) IS NOT NULL) as ways group by highway, name, short_name, railway, tunnel, junction, oneway HAVING sum(way_len)> 32 * !pixel_width!) as w order by way_len) as roads"
+      simplify_geometries: 'true'
 
 
   - id: roads-text-ref
@@ -1083,6 +1089,7 @@ Layer:
     Datasource:
       <<: *osm2pgsql
       table: " /* text-poly */ (SELECT way,osm_id, tags->'heritage' as heritage, coalesce(tags->'name:fr',tags->'int_name',name) as name, case when amenity='townhall' then 2  when amenity in ('post_office','courthouse','police','public_building') then 1  else 0 end as prio,  fr_abbrev(coalesce(tags->'short_name:fr',tags->'short_name',tags->'alt_name',tags->'name:fr',tags->'int_name',name)) as nom, aeroway,shop,access,amenity,leisure,landuse,man_made,\"natural\",place,tourism,substring('******',1,to_int(tags->'stars')::integer) as stars,coalesce(tags->'ele',tags->'ele:local','') as ele,tags->'mountain_pass' as mountain_pass, ref,military,waterway,historic,'no'::text as point, way_area, NULL as way_len, replace(replace(replace(replace(tags->'school:FR','maternelle','École Mat.'),'élémentaire','École'),'primaire','École'),'secondaire','Collège-Lycée') as ecole, power, office, tags->'craft' as craft  FROM planet_osm_polygon  WHERE  coalesce(name, tags->'name:fr',tags->'int_name', tags->'stars', tags->'ele', tags->'ele:local', ref,tags->'school:FR') is not null and (amenity is not null and amenity not in ('townhall','school') or shop is not null  or leisure is not null or landuse is not null or tourism is not null or office is not null or tags ? 'craft' or (\"natural\" is not null AND tags->'water' != 'river')  or man_made in ('lighthouse','windmill') or place='island' or military='danger_area' or historic in ('memorial','archaeological_site','castle')  or aeroway='gate' or power in ('generator','substation','sub_station','plant')) and way_area > !pixel_width!*!pixel_height!*10  UNION  SELECT way,osm_id, tags->'heritage' as heritage, coalesce(tags->'name:fr',tags->'int_name',name) as name, case when amenity='townhall' then 2  when amenity in ('post_office','courthouse','police','public_building') then 1  else 0 end as prio,  fr_abbrev(coalesce(tags->'short_name:fr',tags->'short_name',tags->'alt_name',tags->'name:fr',tags->'int_name',name)) as nom,aeroway,shop,access,amenity,leisure,landuse,man_made,\"natural\",place,tourism,substring('******',1,to_int(tags->'stars')::integer) as stars, coalesce(ele,tags->'ele:local','') as ele, tags->'mountain_pass' as mountain_pass, ref, military, waterway, historic,'yes'::text as point, 0 as way_area, NULL as way_len, replace(replace(replace(replace(tags->'school:FR','maternelle','École Mat.'),'élémentaire','École'),'primaire','École'),'secondaire','Collège-Lycée') as ecole, power, office, tags->'craft' as craft FROM  planet_osm_point  WHERE  coalesce(name, tags->'name:fr',tags->'int_name', tags->'stars', ele, tags->'ele:local', ref,tags->'school:FR') is not null and ((amenity is not null and amenity not in ('townhall')) or shop is not null  or leisure is not null or landuse is not null or tourism is not null or \"natural\" is not null or office is not null or tags ? 'craft' or man_made in ('lighthouse','windmill') or place='island' or military='danger_area' or historic in ('memorial','archaeological_site','castle')  or aeroway='gate' or tags->'mountain_pass'='yes'  or power in ('generator','substation','sub_station','plant')) order by prio desc,way_area desc ) as text"
+      simplify_geometries: 'true'
 
 
   - id: admin-boundaries-text
@@ -1169,6 +1176,7 @@ Layer:
     Datasource:
       <<: *osm2pgsql
       table: " /* theme-park */ (select way,coalesce(tags->'name:fr',tags->'int_name',name) as name,tourism from planet_osm_polygon where tourism='theme_park') as theme_park"
+      simplify_geometries: 'true'
 
 
   - id: parking-handi
@@ -1177,6 +1185,7 @@ Layer:
     Datasource:
       <<: *osm2pgsql
       table: " /* parking-handi */ (SELECT way,0 as way_area, to_int(tags->'capacity:disabled') as capacity FROM planet_osm_point WHERE amenity='parking_space' AND (tags->'wheelchair'='yes' or (tags ? 'capacity:disabled' and tags->'capacity:disabled' not in ('0','no'))) UNION SELECT way, way_area, to_int(tags->'capacity:disabled') as capacity FROM planet_osm_polygon WHERE amenity='parking_space' AND (tags->'wheelchair'='yes' or (tags ? 'capacity:disabled' and tags->'capacity:disabled' not in ('0','no')))) as park"
+      simplify_geometries: 'true'
 
 
   - id: pmr
@@ -1185,3 +1194,4 @@ Layer:
     Datasource:
       <<: *osm2pgsql
       table: " /* pmr */ (SELECT way,highway, coalesce(tags->'conveying',tags->'conveyor_dir') as conveying, tags->'incline' as incline, tags->'wheelchair' as wheelchair, tags->'ramp:wheelchair' as ramp_wheelchair FROM planet_osm_point WHERE (highway in ('steps','footway','elevator','conveyor') or tags ? 'ramp:wheelchair')  and way && !bbox!   UNION    SELECT ST_LineInterpolatePoint(way, 0.5) as way, highway, coalesce(tags->'conveying',tags->'conveyor_dir') as conveying, tags->'incline' as incline, tags->'wheelchair' as wheelchair, tags->'ramp:wheelchair' as ramp_wheelchair FROM planet_osm_line WHERE (highway in ('steps','footway','elevator','conveyor') or tags ? 'ramp:wheelchair')  and way && !bbox! UNION    SELECT way,highway, coalesce(tags->'conveying',tags->'conveyor_dir') as conveying, tags->'incline' as incline, tags->'wheelchair' as wheelchair, tags->'ramp:wheelchair' as ramp_wheelchair FROM planet_osm_polygon WHERE (highway in ('steps','footway','elevator','conveyor') or tags ? 'ramp:wheelchair') and way && !bbox! ) as pmr"
+      simplify_geometries: 'true'
